@@ -37,13 +37,20 @@ For speed we keep this global, although this makes the code non-thread-safe.
 	// "SC_FFT_NONE" allows compilation without FFT support; only expected to be used on very limited platforms
 	#define SC_FFT_FFTW 0
 	#define SC_FFT_VDSP 0
+	#define SC_FFT_GREEN 0
+#elif SC_FFT_GREEN
+	#define SC_FFT_FFTW 0
+	#define SC_FFT_VDSP 0
+	#define SC_FFT_GREEN 1
 #elif !SC_FFT_FFTW && defined(__APPLE__)
 	#define SC_FFT_FFTW 0
 	#define SC_FFT_VDSP 1
+	#define SC_FFT_GREEN 0
 #else
 //#elif SC_FFT_FFTW
 	#define SC_FFT_FFTW 1
 	#define SC_FFT_VDSP 0
+	#define SC_FFT_GREEN 0
 	#include <fftw3.h>
 #endif
 
